# mldig

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  config.toml  pyproject.toml
.github/workflows/: ci.yml
digests/: 2026-07-12.md  2026-07-15.md  2026-07-16.md  2026-07-17.md  2026-07-18.md
docs/: design.md  devlog.md
src/aidig/: arxiv_client.py  cache.py  cli.py  digest.py  filtering.py  summarizer.py
src/mldig/: __init__.py  cache.py  cli.py  config.py  digest.py  filtering.py  summarizer.py
tests/: test_arxiv_client.py  test_cache.py  test_config.py  test_digest.py  test_filtering.py  test_package.py  test_summarizer.py
tests/eval/: build_dataset.py  dataset.jsonl  grader.py  results.jsonl  test_summary_quality.py
